ingress/alternative_deployment_2/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ${K8S_ALTERNATIVE_DEPLOYMENT_2_NAME}-ingress
  namespace: ${K8S_APP_NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ${K8S_ALTERNATIVE_DEPLOYMENT_2_DOMAIN_NAME}
    http:
      paths:
      - path: ${K8S_ALTERNATIVE_DEPLOYMENT_2_URL_PATH}
        backend:
          serviceName: ${PROJECT_NAME}-${K8S_ALTERNATIVE_DEPLOYMENT_2_NAME}-service
          servicePort: 80
